MMLC-145 UI Changes

--- a/templates/equations/equation.html
+++ b/templates/equations/equation.html
@@ -10,7 +10,7 @@
         <div class="form-group">
             <img src="images/load.gif" style="display: none;" class="spinner" alt="Please wait while we process your equation(s)"/>
             <button type="submit" class="btn btn-primary" id="updateEquation">Update</button>
-            <a href="#/"><button type="button" class="btn btn-default">Start Over</button></a>
+            <a href="#/"><button type="button" class="btn btn-primary">Start Over</button></a>
         </div>
     </div>
 </form>
