MMLC-16 Prevent memory leaks and duplicate binding. Fix equation update

--- a/templates/form.html
+++ b/templates/form.html
@@ -8,7 +8,7 @@
             If you are new to MathMLCloud, we also encourage you to <a href="/user/login" class="register">register for an account</a> so that you can access your user activity logs and learn about key project updates as they arise. 
         </p>
     </div>
-    <form id="mml-editor" method="post" action="/equation/svg" class="form spacer">
+    <form method="post" action="/equation/svg" class="form spacer mml-editor">
         <div class="form-group row">
             <label class="col-sm-3 control-label">
                 <input type="radio" name="conversionType" id="singleEquation" value="singleEquation" checked>
