--- a/templates/equations/equation.html
+++ b/templates/equations/equation.html
@@ -9,7 +9,7 @@
     <div class="col-sm-6">
         <div class="form-group">
             <img src="images/load.gif" style="display: none;" class="spinner" alt="Please wait while we process your equation(s)"/>
-            <button type="submit" class="btn btn-primary" id="updateEquation">Update</button>
+            <button type="submit" class="btn btn-primary updateEquation">Update</button>
             <a href="#/"><button type="button" class="btn btn-primary">Start Over</button></a>
         </div>
     </div>
