--- a/templates/user_nav.html
+++ b/templates/user_nav.html
@@ -2,6 +2,7 @@
     <li class="public"><a href="#/about" class="pageLink">About MathML Cloud</a></li>   
     <li class="user-tabs"><a href="#/equations" class="pageLink">My Equations</a></li>
     <li class="user-tabs"><a href="#/uploads" class="pageLink">My File Uploads</a></li>
+    <li class="user-tabs"><a href="#/feedback" class="pageLink">My Feedback</a></li>
     <% if (user.get("role") == "admin") { %>
         <li class="user-tabs"><a href="admin">Admin</a></li>
     <% } %>
