--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -1,4 +1,4 @@
-<% console.log(paginator); if (paginator.state.totalPages > 1) { %>
+<% if (paginator.state.totalPages > 1) { %>
     <nav>
       <ul class="pagination">
         <% if (paginator.state.currentPage > 1) { %>
