--- a/templates/public_nav.html
+++ b/templates/public_nav.html
@@ -11,6 +11,11 @@
         <label for="password" class="sr-only">Password</label>
         <input type="password" id="password" placeholder="Password" class="form-control">
     </div>
-    <button type="submit" class="btn btn-primary">Sign in</button>
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Sign in</button>
+    </div>
+    <div class="form-group">
+        <a href="#/forgotPassword">Forgot your password?</a>
+    </div>
 </form>
 
