MMLC-229 Add change password UI

--- a/templates/users/forgot_password.html
+++ b/templates/users/forgot_password.html
@@ -2,7 +2,7 @@
 <div id="forgotPassword">
     <p>Provide your email address and you will be sent instructions on how to set a new password.</p>
     <form action="#" method="post" class="form-inline">
-        <span id="emailError" class="help-block"></span>
+        <span id="emailError" class="help-block text-danger"></span>
         <div class="form-group" id="usernameGroup">
             <label for="username" class="control-label">Email* <span class="sr-only">Required</span></label>
             <input type="email" name="username" id="username" placeholder="Email Address" class="form-control">
