MMLC-241 change link text

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@ To read about the background of MathML Cloud, please <a href="http://benetech.or
 Benetech provides three usage and adoption models:
 <ol>
 <li>Use Benetech's app - test the tool and process small, one-off requests, at <a href="https://mathmlcloud.org">https://mathmlcloud.org</a>.</li>
-<li>Interact directly via an API - see <a href="https://github.com/benetech/mmlc-experiments/wiki/API-Definition">API Definition</a> for more information on working with the Benetech-hosted instance of MathML Cloud.</li>
+<li>Interact directly via an API - see our <a href="https://github.com/benetech/mmlc-experiments/wiki/API-Definition">Developer Documentation</a> for more information on working with the Benetech-hosted instance of MathML Cloud.</li>
 <li>Host your own version of the tool - visit Github to get the code and host the tool on your own, private server, at <a href="http://github.com/benetech/mmlc-experiments">http://github.com/benetech/mmlc-experiments</a>.</li>
 </ol>
 
