MMLC-266 move admin to backbone

--- a/templates/html5s/html5_uploads.html
+++ b/templates/html5s/html5_uploads.html
@@ -1,3 +1,4 @@
+<% console.log(html5Uploads) %>
 <% if (typeof html5Uploads != 'undefined' && html5Uploads.length > 0) { %>
 <div id="html5Results">
     <table class="table table-striped" id="resultsTable">
