--- a/templates/user_nav.html
+++ b/templates/user_nav.html
@@ -4,7 +4,7 @@
     <li class="user-tabs"><a href="#/uploads" class="pageLink">My File Uploads</a></li>
     <li class="user-tabs"><a href="#/feedback" class="pageLink">My Feedback</a></li>
     <% if (user.get("role") == "admin") { %>
-        <li class="user-tabs"><a href="admin">Admin</a></li>
+        <li class="user-tabs"><a href="#/admin">Admin</a></li>
     <% } %>
     <li class="user-tabs"><a href="/logout" id="logout">Log Out</a></li>
 </ul>
