MMLC-234 user modal to confirm save

--- a/templates/html5s/html5.html
+++ b/templates/html5s/html5.html
@@ -5,6 +5,7 @@
     <% } %>
     HTML5 Upload
 </h2>
+<div class="alert alert-success" role="alert" style="display: none;"></div>
 <ul class="list-inline">
     <li><strong>Filename:</strong> <%= html5.get("filename") %></li>
     <li><strong>Output Type:</strong> <%= html5.get("outputFormat") %></li>
