--- a/templates/equations/equation.html
+++ b/templates/equations/equation.html
@@ -1,4 +1,5 @@
 <h1><a href="#/equation/<%= equation.get("id") %>">Equation</a></h1>
+<div class="alert alert-success" role="alert" style="display: none;"></div>
 <form class="form-horizontal">
     <div class="col-sm-6">
         <div class="form-group">
