MMLC-233 update warning message and add option to add to account after registering

--- a/templates/warnUser.html
+++ b/templates/warnUser.html
@@ -4,14 +4,14 @@
         <div class="col-sm-11">
             <div class="warning-content">
                 <p> 
-                    As a guest user, if you close this window, you will lose the results of the conversion being processed. 
+                    You will lose your conversion results if you close this window. 
                 </p>
                 <p>
-                    If you register for an account, you will be able to access your conversion history at any time.
+                    Login or Register for an account to access your conversion history at any time.
                 </p>
             </div>
             <p>
-                <button class="btn btn-success" id="cancel" type="button" data-dismiss="modal">Cancel</button>
+                <button class="btn btn-success" id="cancel" type="button" data-dismiss="modal">Stay on Page</button>
                 <a id="continue" href="#" class="btn btn-warning">Close Anyway</a>
             </p>
         </div>
