--- a/templates/add_to_account.html
+++ b/templates/add_to_account.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-1"><span class="glyphicon glyphicon-user pull-left btn-lg" aria-hidden="true" title="Add to account"></span></div>
-        <div class="col-sm-11">
+        <div class="col-sm-11" id="question">
             <p>Would you like to save this processed request to your account history?</p>
             <p>
                 <button class="btn btn-success" id="cancel" type="button" data-dismiss="modal">No</button>
