MMLC-269 allow admins to edit users

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -14,6 +14,7 @@
       <!-- Tab panes -->
       <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="dashboard">
+          <h2>Dashboard</h2>
           <ul class="list-group">
             <li class="list-group-item">
               <span class="badge"><%= dashboard.get("numEquations") %></span>Total Equations
@@ -30,18 +31,22 @@
           </ul>
         </div>
         <div role="tabpanel" class="tab-pane" id="feedback">
+          <h2>Feedback</h2>
           <div class="pagination"></div>
           <div class="results"></div>
         </div>
         <div role="tabpanel" class="tab-pane" id="equations">
+          <h2>Equations</h2>
           <div class="pagination"></div>
           <div class="results"></div>
         </div>
         <div role="tabpanel" class="tab-pane" id="users">
+          <h2>Users</h2>
           <div class="pagination"></div>
           <div class="results"></div>
         </div>
         <div role="tabpanel" class="tab-pane" id="html5">
+          <h2>HTML5 Uploads</h2>
           <div class="pagination"></div>
           <div class="results"></div>  
         </div>
